SLING-13007 - Fix: Improve documentation layout alignment  (#245)

--- a/src/main/jbake/assets/res/css/site.css
+++ b/src/main/jbake/assets/res/css/site.css
@@ -53,6 +53,7 @@ a:hover {
 
 .section {
     max-width: 80%;
+    margin: auto;
 }
 
 
